--- a/Project.toml
+++ b/Project.toml
@@ -4,4 +4,6 @@ authors = ["iamfedoroff <iamfedoroff@gmail.com>"]
 version = "0.1.0"
 
 [deps]
+Adapt = "79e6a3ab-5dfb-504d-930d-738a2a938a0e"
+CUDA = "052768ef-5323-5732-b1bb-66c8b64840ba"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
